# pairid

./: README.rst  pyproject.toml
src/pairid/: __init__.py  pairid.py
