[project]
name = "pairid"
version = "0.1.0"
description = """\
    Library of cryptographic key generation and data preparation \
    procedures associated with the PAIR protocol.\
    """
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "oblivious~=7.0"
]

[project.optional-dependencies]
test = [
    "pytest~=7.4; python_version < '3.12'",
    "pytest~=8.2; python_version >= '3.12'",
    "pytest-cov~=4.1; python_version < '3.12'",
    "pytest-cov~=5.0; python_version >= '3.12'"
]
lint = [
    "pylint~=2.17.0; python_version < '3.12'",
    "pylint~=3.2.0; python_version >= '3.12'"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=pairid --cov-report term-missing"
